--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   text-align: center;
   min-height: 100vh;
-  background-image: url('./assets/bank.png');
+  /* background-image: url('./assets/bank.png'); */
   background-size: cover;
   background-repeat: no-repeat;
 }
